Modification box-sizing, début formulaire / panier

--- a/album.html
+++ b/album.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
@@ -60,43 +60,43 @@
             <div class="card-deck">
                 <div class="row mb-4">
                     <div class="card border-success shadow">
-                        <img src="images/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
+                        <img src="pictures/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
                     </div>
                     <div class="card border-success shadow">
-                        <img src="images/album/album_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        <img src="pictures/album/album_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
                     </div>
                     <div class="card border-success shadow">
-                        <img src="images/album/album_3.jpg" alt="Photo d'un ours en peluche, posé allongé sur l'herbe." class="card-img-top">
-                    </div>
-                </div>
-                <div class="row mb-4">
-                    <div class="card border-success shadow">
-                        <img src="images/album/album_4.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="images/album/album_5.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
-                    </div>
-                    <div class="card border-success shadow">
-                        <img src="images/album/album_6.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol, avec des coeurs en peluche." class="card-img-top">
+                        <img src="pictures/album/album_3.jpg" alt="Photo d'un ours en peluche, posé allongé sur l'herbe." class="card-img-top">
                     </div>
                 </div>
                 <div class="row mb-4">
                     <div class="card border-success shadow">
-                        <img src="images/album/album_7.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                        <img src="pictures/album/album_4.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
                     </div>
                     <div class="card border-success shadow">
-                        <img src="images/album/album_8.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur du bois." class="card-img-top">
+                        <img src="pictures/album/album_5.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
                     </div>
                     <div class="card border-success shadow">
-                        <img src="images/album/album_9.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                        <img src="pictures/album/album_6.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol, avec des coeurs en peluche." class="card-img-top">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="card border-success shadow">
+                        <img src="pictures/album/album_7.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="pictures/album/album_8.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur du bois." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="pictures/album/album_9.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
                     </div>
                 </div>
                 <div class="row">
                     <div class="card border-success shadow">
-                        <img src="images/album/album_10.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol, avec des cadeaux." class="card-img-top">
+                        <img src="pictures/album/album_10.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol, avec des cadeaux." class="card-img-top">
                     </div>
                     <div class="card border-success shadow">
-                        <img src="images/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                        <img src="pictures/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
                     </div>
                 </div>
             </div>
