--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
@@ -62,10 +62,10 @@
                     <div id="carouselControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/carousel/carousel_1.jpg" class="d-block w-100" alt="Photo d'un ours en peluche, posé assis dehors sur le sol.">
+                              <img src="pictures/carousel/carousel_1.jpg" class="d-block w-100" alt="Photo d'un ours en peluche, posé assis dehors sur le sol.">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/carousel/carousel_2.jpg" class="d-block w-100" alt="Photo de deux ours en peluche, dehors sur un canapé, un assis et un allongé.">
+                              <img src="pictures/carousel/carousel_2.jpg" class="d-block w-100" alt="Photo de deux ours en peluche, dehors sur un canapé, un assis et un allongé.">
                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
