--- a/informations_produits.html
+++ b/informations_produits.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
@@ -56,24 +56,24 @@
                 </div>
             </nav>
         </header>
-        <main class="container">
+        <main class="container card-size">
             <div class="card-deck">
                 <section class="card border-success shadow mb-2">
-                    <img src="images/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    <img src="pictures/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Qualité</h5>
                         <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
                     </div>
                 </section>
                 <section class="card border-success shadow mb-2">
-                    <img src="images/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
+                    <img src="pictures/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Made in France</h5>
                         <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
                     </div>
                 </section>
                 <section class="card border-success shadow mb-2">
-                    <img src="images/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
+                    <img src="pictures/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Respectueux de l'environnement.</h5>
                         <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
