--- a/produit.html
+++ b/produit.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
@@ -64,9 +64,10 @@
                 <div class="col">
                     <h2 id="name"></h2>
                     <p id="description"></p>
-                    <select id="selectColor" class="form-select">
-                        <option>Choix de la couleur</option>
-                    </select>
+                    <label>Choix de la couleur :
+                        <select id="selectColor" class="form-select">
+                        </select>
+                    </label>
                     <p id="price"></p>
                     <a id="add_to_cart" class="btn btn-success" role="button">Ajouter au panier</a>
                     <a href="index.html" class="btn btn-success" role="button">Retour en arrière</a>
