--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
