--- a/panier.html
+++ b/panier.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
                         <h1 class="mt-2">Oriteddy</h1>
                     </a>
                 </div>
@@ -57,18 +57,56 @@
             </nav>
         </header>
         <main class="container">
-            <table class="table table-success">
-                <thead>
-                    <tr>
-                        <th scope="col">Article</th>
-                        <th scope="col">Nom</th>
-                        <th scope="col">Couleur</th>
-                        <th scope="col">Prix</th>
-                    </tr>
-                    <tbody id="cart">
-                    </tbody>
-                </thead>
-            </table>
+            <div class="row">
+                <div class="col">
+                    <table class="table table-success">
+                        <thead>
+                            <tr>
+                                <th scope="col">Article</th>
+                                <th scope="col">Nom</th>
+                                <th scope="col">Couleur</th>
+                                <th scope="col">Prix</th>
+                            </tr>
+                            <tbody id="cart">
+                            </tbody>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+            
+            <form class="bg-light">
+                <h2 class="text-center title-form mb-4">Informations nécessaires pour valider la commande</h2>
+                <div class="row">
+                    <div class="col">
+                        <label for="lastname">Nom :</label>
+                        <input name="lastname" type="text" class="form-control" minlength="2" maxlength="30" placeholder="Dupont">
+                    </div>
+                    <div class="col">
+                        <label for="name">Prénom :</label>
+                        <input name="name" type="text" class="form-control" minlength="2" maxlength="30" placeholder="John">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col">
+                        <label for="adress">Adresse :</label>
+                        <input name="adress" type="text" class="form-control" placeholder="14 rue des fleurs">
+                    </div>
+                    <div class="form-group col">
+                        <label for="city">Ville :</label>
+                        <input name="city" type="text" class="form-control" placeholder="Paris">
+                    </div>
+                    <div class="form-group col">
+                        <label for="country">Pays :</label>
+                        <input name="country" type="text" class="form-control" placeholder="France">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col">
+                        <label for="email">Mail :</label>
+                        <input name="email" type="text" class="form-control" placeholder="oriteddy@orinoco.com">
+                    </div>
+                </div>
+            </form>
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
