--- a/informations_produits.html
+++ b/informations_produits.html
@@ -7,33 +7,35 @@
         <!-- Primary Meta Tags -->
         <title>Oriteddy - Produits</title>
         <meta name="title" content="Oriteddy - Informations produits">
-        <meta name="description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
+        <meta name="description" content="Informations sur les produits de l'entreprise Oriteddy.">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://timotelancelle.com">
+        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/informations_produits.html">
         <meta property="og:title" content="Oriteddy - Informations produits">
-        <meta property="og:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
-        <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="og:description" content="Informations sur les produits de l'entreprise Oriteddy.">
+        <meta property="og:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://timotelancelle.com">
+        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/informations_produits.html">
         <meta property="twitter:title" content="Oriteddy - Informations produits">
-        <meta property="twitter:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
-        <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="twitter:description" content="Informations sur les produits de l'entreprise Oriteddy.">
+        <meta property="twitter:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <div class="row">
-                    <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
-                        <h1 class="mt-2">Oriteddy</h1>
-                    </a>
-                </div>
+        <header class="container">
+            <div class="row">
+                <a class="col text-center" href="index.html">
+                    <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                </a>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+            <div class="row">
+                <a class="col text-center text-success text-decoration-none" href="index.html">
+                    <h1>Oriteddy</h1>
+                </a>
+            </div>
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -43,7 +45,7 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
+                                <a class="nav-link active text-success" href="informations_produits.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
@@ -56,8 +58,8 @@
                 </div>
             </nav>
         </header>
-        <main class="container card-size">
-            <div class="card-deck">
+        <main class="container">
+            <div class="row card-deck">
                 <section class="card border-success shadow mb-2">
                     <img src="pictures/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
                     <div class="card-body">
@@ -81,9 +83,9 @@
                 </section>
             </div>
         </main>
-        <footer>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+        <footer class="container mt-5">
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
