--- a/album.html
+++ b/album.html
@@ -10,30 +10,32 @@
         <meta name="description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://timotelancelle.com">
+        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/album.html">
         <meta property="og:title" content="Oriteddy - Album">
         <meta property="og:description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
-        <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="og:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://timotelancelle.com">
+        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/album.html">
         <meta property="twitter:title" content="Oriteddy - Album">
         <meta property="twitter:description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
-        <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="twitter:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <div class="row">
-                    <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
-                        <h1 class="mt-2">Oriteddy</h1>
-                    </a>
-                </div>
+        <header class="container">
+            <div class="row">
+                <a class="col text-center" href="index.html">
+                    <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                </a>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+            <div class="row">
+                <a class="col text-center text-success text-decoration-none" href="index.html">
+                    <h1>Oriteddy</h1>
+                </a>
+            </div>
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -57,7 +59,7 @@
             </nav>
         </header>
         <main class="container">
-            <div class="card-deck">
+            <section class="card-deck">
                 <div class="row mb-4">
                     <div class="card border-success shadow">
                         <img src="pictures/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
@@ -99,11 +101,11 @@
                         <img src="pictures/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
-        <footer class="mt-5">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+        <footer class="container mt-5">
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
