--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -10,30 +10,32 @@
         <meta name="description" content="Page sur les mentions légales du site e-commerce Oriteddy.">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://timotelancelle.com">
+        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/mentions_legales.html">
         <meta property="og:title" content="Oriteddy - Mentions légales">
         <meta property="og:description" content="Page sur les mentions légales du site e-commerce Oriteddy.">
-        <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="og:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://timotelancelle.com">
+        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/mentions_legales.html">
         <meta property="twitter:title" content="Oriteddy - Mentions légales">
         <meta property="twitter:description" content="Page sur les mentions légales du site e-commerce Oriteddy.">
-        <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="twitter:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <div class="row">
-                    <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
-                        <h1 class="mt-2">Oriteddy</h1>
-                    </a>
-                </div>
+        <header class="container">
+            <div class="row">
+                <a class="col text-center" href="index.html">
+                    <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                </a>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+            <div class="row">
+                <a class="col text-center text-success text-decoration-none" href="index.html">
+                    <h1>Oriteddy</h1>
+                </a>
+            </div>
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -120,9 +122,9 @@
                 </div>
             </section>
         </main>
-        <footer class="mt-4">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+        <footer class="container mt-5">
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -134,7 +136,7 @@
                             <li class="nav-item mx-3">
                                 <a class="nav-link active text-success" href="mentions_legales.html">Mentions légales</a>
                             </li>
-                            <li class="nav-item active mx-3">
+                            <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="contact.html">Contact</a>
                             </li>
                         </ul>
