--- a/panier.html
+++ b/panier.html
@@ -10,30 +10,32 @@
         <meta name="description" content="Retrouvez votre panier d'articles Oriteddy dès maintenant.">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://timotelancelle.com">
+        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/panier.html">
         <meta property="og:title" content="Oriteddy - Panier">
         <meta property="og:description" content="Retrouvez votre panier d'articles Oriteddy dès maintenant.">
-        <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="og:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://timotelancelle.com">
+        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/panier.html">
         <meta property="twitter:title" content="Oriteddy - Panier">
         <meta property="twitter:description" content="Retrouvez votre panier d'articles Oriteddy dès maintenant.">
-        <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
+        <meta property="twitter:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
     </head>
 
     <body>
-        <header>
-            <div class="container">
-                <div class="row">
-                    <a class="col text-center text-success text-decoration-none" href="index.html">
-                        <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
-                        <h1 class="mt-2">Oriteddy</h1>
-                    </a>
-                </div>
+        <header class="container">
+            <div class="row">
+                <a class="col text-center" href="index.html">
+                    <img src="pictures/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                </a>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+            <div class="row">
+                <a class="col text-center text-success text-decoration-none" href="index.html">
+                    <h1>Oriteddy</h1>
+                </a>
+            </div>
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -57,23 +59,18 @@
             </nav>
         </header>
         <main class="container">
-            <div class="row">
-                <div class="col">
-                    <table class="table table-success">
-                        <thead>
-                            <tr>
-                                <th scope="col">Article</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Couleur</th>
-                                <th scope="col">Prix</th>
-                            </tr>
-                            <tbody id="cart">
-                            </tbody>
-                        </thead>
-                    </table>
-                </div>
-            </div>
-            
+            <table class="table table-success">
+                <thead>
+                    <tr>
+                        <th scope="col">Article</th>
+                        <th scope="col">Nom</th>
+                        <th scope="col">Couleur</th>
+                        <th scope="col">Prix</th>
+                    </tr>
+                    <tbody id="cart">
+                    </tbody>
+                </thead>
+            </table>
             <form class="bg-light">
                 <h2 class="text-center title-form mb-4">Informations nécessaires pour valider la commande</h2>
                 <div class="row">
@@ -108,9 +105,9 @@
                 </div>
             </form>
         </main>
-        <footer class="mt-5">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
-                <div class="container">
+        <footer class="container mt-5">
+            <nav class="row navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="col">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
