--- a/panier.html
+++ b/panier.html
@@ -61,11 +61,13 @@
         <main class="container">
             <table class="table table-success">
                 <thead>
-                    <tr>
+                    <tr class="text-center">
                         <th scope="col">Article</th>
                         <th scope="col">Nom</th>
                         <th scope="col">Couleur</th>
                         <th scope="col">Prix</th>
+                        <th scope="col">Quantité</th>
+                        <th scope="col">Supprimer l'article</th>
                     </tr>
                     <tbody id="cart">
                     </tbody>
