--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css" />
         <!-- Primary Meta Tags -->
-        <title>Oriteddy - Produits</title>
+        <title>Oriteddy - À propos</title>
         <meta name="title" content="Oriteddy - À propos">
         <meta name="description" content="Présentation de l'entreprise Oriteddy, de ses origines, jusqu'à ses objectifs.">
         <!-- Open Graph / Facebook -->
@@ -45,13 +45,13 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
+                                <a class="nav-link text-success" href="product_information.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="panier.html">Panier</a>
+                                <a class="nav-link text-success" href="cart.html">Panier</a>
                             </li>
                         </ul>
                     </div>
@@ -72,10 +72,10 @@
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
-                                <a class="nav-link active text-success" href="propos.html">À propos</a>
+                                <a class="nav-link active text-success" href="about.html">À propos</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
+                                <a class="nav-link text-success" href="legal_notice.html">Mentions légales</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="contact.html">Contact</a>
