--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                                 <a class="nav-link active text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
+                                <a class="nav-link text-success" href="product_information.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="panier.html">Panier</a>
+                                <a class="nav-link text-success" href="cart.html">Panier</a>
                             </li>
                         </ul>
                     </div>
@@ -94,10 +94,10 @@
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="propos.html">À propos</a>
+                                <a class="nav-link text-success" href="about.html">À propos</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
+                                <a class="nav-link text-success" href="legal_notice.html">Mentions légales</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="contact.html">Contact</a>
@@ -110,6 +110,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="js/produits.js" async></script>
+        <script src="js/products.js" async></script>
 </body>
 </html>
