Fin des regex pour contrôler les validations dans le formulaires panier

--- a/product.html
+++ b/product.html
@@ -10,13 +10,13 @@
         <meta name="description" content="">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/produit.html">
+        <meta property="og:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/product.html?id=5be9c8541c9d440000665243">
         <meta property="og:title" content="Oriteddy - Produit">
         <meta property="og:description" content="">
         <meta property="og:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/produit.html">
+        <meta property="twitter:url" content="https://lancelletimote.github.io/TimoteLancelle_5_18012021/product.html?id=5be9c8541c9d440000665243">
         <meta property="twitter:title" content="Oriteddy - Produit">
         <meta property="twitter:description" content="">
         <meta property="twitter:image" content="https://i.ibb.co/Wf8v0vQ/logo-metatags.png">
