Mise de la page HTML about

--- a/about.html
+++ b/about.html
@@ -59,8 +59,18 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row">
-                
+            <section class="row text-center">
+                <div class="col">
+                    <h2 class="text-success">Durabilité</h2>
+                    <p>Chez Oriteddy, nous nous impliquons et nous investissons dans le développement durable, car pour nous cela n'a que des avantages : c'est bon pour nos activités, la planète, nos clients et nos communautés.</p>
+                    <p>Toutefois, si nous pensons d’abord à eux, nous accordons également la plus grande importance à notre contribution économique, sociale et environnementale au niveau local. En mettant toute notre énergie, notre savoir-faire et notre capacité d’innovation au service des Français, nous contribuons à la croissance de l’économie française.</p>
+                </div>
+            </section>
+            <section class="row text-center mt-3">
+                <div class="col">
+                    <h2 class="text-success">Engagements</h2>
+                    <p>Chez Oriteddy, nous apportons notre soutien aux communautés dans lesquelles vivent nos employés et nos clients, et nous agissons pour l'environnement. Voici quelques exemples de notre implication.</p>
+                </div>
             </section>
         </main>
         <footer class="container mt-5">
