Correction début code JS (passage en anglais des noms, ajouts de commentaires), correction code ajout au panier quand produit même id et couleur

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                      </div>
                 </div>
             </div>
-            <div class="row" id="listeCartes">
+            <div class="row" id="cardList">
                 <!--carte inséré en JS-->
             </div>
         </main>
