Test ajout quantité même produit

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="row" id="cardList">
-                <!--carte inséré en JS-->
+                <!--Intégration des cartes produits en JS-->
             </div>
         </main>
         <footer class="container mt-5">
