--- a/product.html
+++ b/product.html
@@ -60,6 +60,7 @@
         </header>
         <main class="container">
             <section class="row">
+                <!--Intégration des différents éléments en JS (image, nom, description, ...)-->
                 <div class="col">
                     <img src='' alt="Photo ours en peluche" id="picture" class="w-75 d-block mx-auto border border-success shadow">
                 </div>
