Construction en entier du JS order, début fonction ajouter 1 quantité

--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -59,7 +59,7 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row" id="orderConfirmed">
+            <section class="text-center" id="orderConfirmed">
                 <!--Intégration de la confirmation de la commande en JS-->
             </section>
         </main>
