--- a/cart.html
+++ b/cart.html
@@ -62,6 +62,7 @@
             <table class="table table-success">
                 <thead>
                     <tr class="text-center">
+                        <th scope="col" class="d-none">Id</th>
                         <th scope="col">Article</th>
                         <th scope="col">Nom</th>
                         <th scope="col">Couleur</th>
