Correction des fichiers HTML suite au passage au validateur

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div id="navbarContent" class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
                                 <a class="nav-link active text-success" href="index.html">Accueil</a>
@@ -91,7 +91,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div id="navbarContent" class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="about.html">À propos</a>
