--- a/legal_notice.html
+++ b/legal_notice.html
@@ -39,7 +39,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div id="navbarContent" class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
@@ -73,7 +73,7 @@
                     Crédits : Jeanne AMET
                     Paul KARAK
                     Timoté LANCELLE<br />
-                    Le modèle de mentions légales est offert par Subdelirium.com <a target="_blank" href="https://www.subdelirium.com/generateur-de-mentions-legales/" alt="generateur de mentions légales">Générateur de mentions légales</a></p>
+                    Le modèle de mentions légales est offert par Subdelirium.com <a target="_blank" href="https://www.subdelirium.com/generateur-de-mentions-legales/" title="generateur de mentions légales">Générateur de mentions légales</a></p>
 
                     <h3>2. Conditions générales d’utilisation du site et des services proposés.</h3>
                     <p>L’utilisation du site <a href="http://www.orinoco.com/">www.orinoco.com</a> implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site <a href="http://www.orinoco.com/">www.orinoco.com</a> sont donc invités à les consulter de manière régulière.</p>
@@ -128,7 +128,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div id="navbarContent" class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="about.html">À propos</a>
